--- a/RemoteControlClient/app/src/main/AndroidManifest.xml
+++ b/RemoteControlClient/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
 
         <activity android:name=".TestActivity"/>
         <activity android:name=".PanelActivity"/>
+        <activity android:name=".PanelListActivity"/>
     </application>
 
 </manifest>
