--- a/RemoteControlClient/app/src/main/AndroidManifest.xml
+++ b/RemoteControlClient/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".TestActivity"/>
         <activity android:name=".PanelActivity"/>
         <activity android:name=".PanelListActivity"/>
+        <activity android:name=".EditWidgetActivity"/>
     </application>
 
 </manifest>
