添加控件功能完善
通关跳转Acitivity获取返回信息的方法，现在能够添加不同的控件

--- a/RemoteControlClient/app/src/main/AndroidManifest.xml
+++ b/RemoteControlClient/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
         <activity android:name=".PanelActivity"/>
         <activity android:name=".PanelListActivity"/>
         <activity android:name=".EditWidgetActivity"/>
+        <activity android:name=".SelectWidgetActivity"/>
     </application>
 
 </manifest>
