--- a/RemoteControlClient/app/build.gradle
+++ b/RemoteControlClient/app/build.gradle
@@ -23,4 +23,5 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:25.3.1'
+    androidTestCompile 'junit:junit:4.12'
 }
