--- a/RemoteControlClient/build.gradle
+++ b/RemoteControlClient/build.gradle
@@ -15,10 +15,10 @@ buildscript {
 
 allprojects {
     repositories {
-        //jcenter()
-        maven {
-            url 'http://maven.oschina.net/content/groups/public/'
-        }
+        jcenter()
+//        maven {
+//            url 'http://maven.oschina.net/content/groups/public/'
+//        }
     }
 }
 
